--- a/WaifuBackground/manifest.json
+++ b/WaifuBackground/manifest.json
@@ -6,6 +6,7 @@
   "description": "Just get a random waifu to grace your google homepage, or save her permanently",
   "content_scripts": [{
     "js": ["content.js"],
+	"css": ["content.css"],
     "matches": ["<all_urls>"]
   }]
  
